--- a/test/fixtures/photos.yml
+++ b/test/fixtures/photos.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  vacation_id: 
   name: MyString
+  descrioption: MyString
   user_id: 1
-  vacation_id: 1
-  description: MyString
 
 two:
+  vacation_id: 
   name: MyString
+  descrioption: MyString
   user_id: 1
-  vacation_id: 1
-  description: MyString
