--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,9 @@ services:
   - postgresql
 
 before_script:
-- psql -c 'create database FamilyTime_test;' -U postgres
+  - bundle exec rake db:create
+  - bundle exec rake db:migrate
+  - bundle exec rake db:test:prepare
+
+notifications:
+  email: false
